[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
# Distribution name (PyPI). The import package stays `rebar` and the console
# scripts stay `rebar` / `rebar-mcp` — those are independent of the dist name.
# `rebar` itself is taken on PyPI (Eventbrite), so we publish under `nava-rebar`.
name = "nava-rebar"
version = "0.7.1"
description = "Event-sourced ticket system with a Jira reconciler — CLI, Python library, and MCP server."
readme = "README.md"
# Floor is 3.11: the reconciler uses enum.StrEnum (new in 3.11) — see
# rebar_reconciler/mutation.py / inbound_probe.py. (Was previously declared
# >=3.10, but that never actually worked; corrected here.)
requires-python = ">=3.11"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [{ name = "Nava PBC", email = "hello@navapbc.com" }]
maintainers = [{ name = "Joe Oakhart", email = "joeoakhart@navapbc.com" }]
keywords = [
    "mcp",
    "cli",
    "jira",
    "agent-coordination",
    "ticketing",
    "event-sourcing",
    "git",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: POSIX",
    "Operating System :: MacOS :: MacOS X",
    "Topic :: Software Development :: Bug Tracking",
    "Topic :: Software Development :: Version Control :: Git",
]

# Core stays deliberately tiny. Three runtime dependencies, all serving the
# LEAN-RUNTIME workflow + schema capability (epic a88f) that must work WITHOUT the
# heavy `[agents]`/`[eval]`/`[tracing]` extras:
#   - pyyaml: the YAML loader for the workflow DSL — loading + running a
#     `.rebar/workflows/*.yaml` workflow cannot have an optional parser. PyYAML's
#     SafeLoader is hardened toward YAML 1.2 Core by rebar.llm.workflow.schema
#     (anchors/merge keys rejected, 1.1 yes/no/on/off bools dropped).
#   - jsonschema: the JSON-Schema validator behind the core schema registry
#     (rebar.schemas) and the workflow interpreter's input/output-contract checks
#     (rebar.llm.workflow.interpreter). These are imported on lean-runtime paths
#     (run_workflow needs NO extra), so the validator cannot be optional either —
#     it was previously dev-only, which made `rebar.schemas.validator()` and
#     contract validation raise ImportError on a plain install. `referencing` is
#     declared explicitly because rebar.schemas imports it directly (it is also a
#     transitive of jsonschema, but we declare what we import).
# This is consistent with the optionality CI (the import-linter ban-list targets
# only the heavy ML/telemetry stack: anthropic/inspect_ai/langchain*/langgraph*/
# opentelemetry*; pyyaml + jsonschema + referencing are intentionally permitted in core).
# Everything else — the engine core and the reconciler — remains stdlib-only.
dependencies = [
    "pyyaml>=6",
    "jsonschema>=4.18",
    "referencing>=0.30",
]

# The engine assets (the rebar_reconciler package + jira-capability-probe.py + the
# alias wordlist) are stdlib-only and ship as package data under rebar/_engine/.
# System prerequisites (not pip deps): git, and `acli` (only for live Jira
# reconciliation).

[project.urls]
Homepage = "https://github.com/navapbc/rebar"
Repository = "https://github.com/navapbc/rebar"
Documentation = "https://github.com/navapbc/rebar/blob/main/docs/README.md"
Issues = "https://github.com/navapbc/rebar/blob/main/SUPPORT.md"
Changelog = "https://github.com/navapbc/rebar/blob/main/CHANGELOG.md"
Security = "https://github.com/navapbc/rebar/blob/main/SECURITY.md"

[project.optional-dependencies]
mcp = ["mcp>=1.28.1,<2"]
# Review-bot webhook receiver (epic d251 / story S2). OPTIONAL — never required by
# core rebar. A thin FastAPI ASGI app (src/rebar/review_bot/) that receives Gerrit
# webhooks and imports the review kernel as a library (see docs/adr/0007). The
# review/vote LOGIC lands in S4b; this extra ships only the receiver skeleton.
# Imported lazily (the fastapi import lives inside review_bot.app, so `import rebar`
# stays dependency-free); only running the receiver needs this extra. `uvicorn[standard]`
# pulls the production-grade ASGI server + its uvloop/httptools/websockets stack.
# `boto3` is for the BEST-EFFORT direct CloudWatch publish of rebar/host:voter_errors
# from the fail-closed VOTER_ERROR path (voter.py); the journald → host-probe path
# (infra observability.sh) is the reliable fallback when in-container IMDS is unreachable.
reviewbot = ["fastapi", "uvicorn[standard]", "boto3"]
# Audit web UI (story a3d7). OPTIONAL — never required by core rebar. A read-only,
# disabled-by-default local surface (`rebar audit serve`, gated by `[ui] enabled`) that
# serves an index of tickets with audit data. All web imports are lazy (they live inside
# src/rebar/audit/server.py, which nothing in core imports, so `import rebar` stays
# dependency-free); only *running* the server needs this extra. `uvicorn[standard]` pulls
# the production-grade ASGI server + its stack; `jinja2` renders the (minimal) index page.
ui = ["fastapi", "uvicorn[standard]", "jinja2"]
# LLM agent-operations framework (rebar.llm). OPTIONAL — never required by core
# rebar (the engine stays stdlib-only, `dependencies = []`). The in-process runner is the
# provider-agnostic pydantic-ai runtime (the LangChain/LangGraph stack was dropped in the
# d6d1 cutover). Everything here is imported lazily, so `import rebar` and even
# `import rebar.llm` stay dependency-free; only *running* an operation needs this extra.
agents = [
    # Provider-agnostic agent runtime (epic hump-seam-spice): the PydanticAIRunner behind
    # the Runner seam — THE runtime since the d6d1 cutover dropped the LangChain/LangGraph
    # stack (it was validated live across every operation first). The provider is chosen by
    # the model string (no per-provider code); `[anthropic]` is the primary provider SDK,
    # OpenAI/Google are opt-in (`pydantic-ai-slim[openai|google]`). MCP is native to
    # pydantic-ai (no langchain-mcp-adapters). The tolerant structured-output parse uses
    # json-repair (no LLM). Tracing is the optional `[tracing]` OTel exporter (Langfuse is
    # an OTLP endpoint, not an SDK dep here).
    # `[retries]` adds pydantic_ai.retries (AsyncTenacityTransport + wait_retry_after) and
    # pulls in tenacity — the transport-layer LLM retry (epic jira-reb-687 / story arcticduck).
    "pydantic-ai-slim[anthropic,retries]>=1,<2",
    "json-repair>=0.61",  # >=0.61 for repair_json(schema=…) schema-guided repair (story drake)
    "pydantic>=2",
]
# Additional model providers are opt-in (keep the default extra lean):
#   pip install 'pydantic-ai-slim[google]'   # Gemini
#
# Prompt evaluation (epic a88f / WS-G). Net-new extra: Inspect AI is the eval
# substrate; promptfoo interop is via the generated JUnit/config (no pip dep).
# Imported lazily behind `rebar._optional.guard_import(..., extra="eval")`.
eval = [
    "inspect-ai>=0.3.221",
]
# OTLP trace sink (epic a88f / WS-J). Net-new extra. WRITE-ONLY by rule —
# OpenTelemetry is a sink, never read back into a rebar decision (oracle
# discipline). Imported lazily behind guard_import(..., extra="tracing").
tracing = [
    "opentelemetry-sdk>=1.20",
    "opentelemetry-exporter-otlp>=1.20",
]
# Code-grounding evidence oracle (epic 8f6c). Net-new extra. The evidence CONTRACT
# and the fail-open execution HARNESS (story 0b2b) are stdlib-only and import-clean;
# this extra adds only the IN-PROCESS structural-parsing binding (tree-sitter, via
# the language pack of ~306 grammars) that later backends (Engine B detectors) run
# inside the worker-subprocess boundary. The out-of-process backends (universal-ctags,
# OpenGrep/ast-grep, scc/lizard) are external CLIs, not pip deps. Imported lazily
# behind guard_import(..., extra="grounding"); a non-adopting client pays nothing.
grounding = [
    "tree-sitter>=0.21",
    "tree-sitter-language-pack>=0.2",
]
# The opt-in T2 semantic-resolution backend (epic 850f, ADR 0030): a self-contained
# pyright the oracle shells out to. Absent it, the T2 tier abstains (no_tool) — it is
# never on a deterministic blocking path, so a non-adopting client pays nothing.
grounding-t2 = [
    "pyright>=1.1",
]
dev = [
    "pytest>=8",
    "mcp>=1.28.1,<2",
    # jsonschema/referencing moved to core [project.dependencies] — the schema
    # registry + workflow contract validation are lean-runtime paths, not dev-only.
    "hatchling>=1.18",
    # PEP 517 front-end used by the build-provenance E2E tests (they run `python -m build`
    # to exercise the sdist→wheel path and assert the baked COMMIT — story 6168). Also what
    # the release workflow's build-once job uses. A floor is fine: this is dev/CI-only.
    "build>=1.2",
    # Lint/format tool — pinned EXACTLY (not a floor) so `make format`, `make lint`,
    # the pre-commit hook, and CI all run the IDENTICAL ruff: ruff changes format/lint
    # rules between releases, so an unpinned floor lets local and CI drift (green here,
    # red there). Bump deliberately (and in lock-step with the pre-commit usage).
    "ruff==0.15.19",
    "mypy>=1.10",
    "pytest-cov>=5",
    # Parallel test execution (story 8d36). Pinned EXACTLY (not a floor) so local and
    # CI run the identical scheduler: xdist changes work-distribution/teardown behavior
    # between releases, and the gating suite's per-test isolation is validated against
    # THIS version. Coverage under xdist requires `parallel = true` in
    # [tool.coverage.run]. Bump deliberately.
    "pytest-xdist==3.8.0",
    # Duration-based test sharding. Consumes the `.test_durations` file that
    # `pytest --store-durations` (task 9ad9) can persist, to split the suite evenly
    # across runners in a future cross-runner shard. Pinned exactly for the same
    # local↔CI parity reason as xdist; kept here now so the shared dev/CI env has it
    # available for 9ad9's optional store step and follow-on sharding work.
    "pytest-split==0.11.0",
    # The commit gate driver: `make install`/`make hooks` run `pre-commit install`,
    # and CI runs `pre-commit run --all-files` for local↔CI parity. Declared here so a
    # clean editable install has it (no reliance on a global/pipx pre-commit).
    "pre-commit>=3.5",
    # GitHub Actions security auditor — run scoped to .github/workflows/release.yml under
    # `make lint` (the release supply-chain gate: full-SHA pins, persist-credentials,
    # over-broad/OIDC permissions). Pinned EXACTLY (not a floor) for local↔CI parity: zizmor
    # tightens/adds audits across releases, so an unpinned floor lets findings drift (green
    # here, red in CI). Bump deliberately.
    "zizmor==1.27.0",
    # Pull the full agents stack so the rebar.llm validation tests (provider
    # construction for Claude + ChatGPT, MCP/Langfuse paths) RUN in CI rather than
    # skipping. Self-referential extra — kept here, not in core, so `pip install
    # nava-rebar` stays dependency-free.
    "nava-rebar[agents]",
]

[project.scripts]
rebar = "rebar.cli:main"
rebar-mcp = "rebar.mcp_server:main"

# Bake the gate-code commit SHA into the wheel/sdist for non-git installs (epic
# jira-reb-596). Auto-discovers hatch_build.py at the repo root; writes the generated,
# git-ignored src/rebar/_build_info.py, force-included in the wheel below.
[tool.hatch.build.hooks.custom]

[tool.hatch.build.targets.wheel]
# packages includes the whole src/rebar tree (the _engine dir with the reconciler
# package, the Jira probe, and the alias wordlist ships verbatim as package data —
# hatchling includes all files under the package, not just .py).
packages = ["src/rebar"]
artifacts = [
    "src/rebar/_engine/**/*",
    # Force-include the VENDORED workflow-editor bundle: the repo-root .gitignore
    # ignores `dist/` globally, so without this the shipped editor.{js,css} would be
    # dropped from the wheel (verified by tests/unit/test_engine_dir.py).
    "src/rebar/llm/workflow/editor_assets/dist/**/*",
    # Build-baked gate-code SHA (git-ignored, written by hatch_build.py) — force-include
    # so the baked fallback reaches PyPI/wheel installs (epic jira-reb-596).
    "src/rebar/_build_info.py",
]
# Never ship compiled bytecode. The `artifacts` glob above force-includes engine
# files that .gitignore would otherwise drop, so spell out the bytecode exclusion
# explicitly rather than relying on gitignore filtering (ticket fare-rant-clasp;
# verified by tests/unit/test_engine_dir.py::test_wheel_has_no_bytecode).
# The editor_assets npm install tree (node_modules) is a BUILD input, never shipped —
# exclude it so it can't bloat the wheel (only the built dist/ ships, via artifacts).
exclude = [
    "**/__pycache__",
    "**/*.pyc",
    "**/*.pyo",
    "**/node_modules",
    # The Terraform IaC tree (infra/) is operational infrastructure, never
    # shipped in the wheel. It is already outside `packages = ["src/rebar"]`,
    # but exclude it explicitly as belt-and-suspenders.
    "/infra",
    "infra",
    "infra/**",
]

[tool.hatch.build.targets.sdist]
include = ["src/rebar", "tests", "README.md"]
exclude = [
    "**/__pycache__",
    "**/*.pyc",
    "**/*.pyo",
    "**/node_modules",
    # infra/ is already excluded by the `include` allowlist above (it is not in
    # the list), but exclude it explicitly as belt-and-suspenders so a future
    # `include` change can't accidentally start shipping the Terraform IaC.
    "/infra",
    "infra",
    "infra/**",
]

[tool.ruff]
# Engine ships as package data but is normal Python; lint it too. The gating set
# below is the full recommended set — E, F, W, I, UP, B — and the whole tree is
# CLEAN for it, so `ruff check src tests` passes and prevents regressions across
# every one of those families. Coverage spans pycodestyle errors + warnings (E/W,
# including E501 line-length), Pyflakes (F — undefined names, unused imports,
# redefinitions), import sorting (I), pyupgrade modernizations (UP), and the
# flake8-bugbear checks (B — including B007/B017/B904/B905). Re-export facades
# (e.g. reconciler `acli`/`applier`, `rebar.graph`) declare an `__all__` so their
# intentional re-exports satisfy F401; a handful of unbreakable string/data
# literals carry a targeted `# noqa: E501`.
#
# target-version is intentionally kept at the conservative py310 floor (not py311)
# even though requires-python is >=3.11: it keeps the gating UP set from pushing
# 3.11-only idioms (e.g. datetime.UTC) and a risky str+Enum -> StrEnum migration
# as mandatory fixes. Code clean for a py310 target runs fine on 3.11/3.12.
target-version = "py310"
line-length = 100


# Formatting: ruff's recommended defaults (Black-compatible — double quotes,
# space indentation, magic trailing comma honored). `line-length` is inherited
# from [tool.ruff] above. `ruff format --check src tests` gates in CI.
[tool.ruff.format]

[tool.ruff.lint]
# BLE001 (blind-except) + T201 (print) are the error-handling-convention gate
# (epic ring-gun-jot). They are enabled tree-wide and gated behind a *shrinking*
# per-file-ignores allowlist (below): every not-yet-swept package is exempted until
# its sweep brings it to the observability floor, then removed from the allowlist.
# The exemplar package `src/rebar/llm/plan_review/` is deliberately NOT exempt.
select = ["E", "F", "W", "I", "UP", "B", "BLE001", "T201"]

# ── BLE001 / T201 per-file-ignores (epic ring-gun-jot — CLOSED OUT) ───────────
# The shrinking allowlist (a clone of the `.github/module-size-allowlist.txt`
# strangler) has been fully worked through (substrate → exemplar → 5 sweeps → 0ec1):
#
#   • BLE001 — the allowlist is EMPTY. No src/ package is exempt: every broad
#     `except` across the tree carries a justified inline `# noqa: BLE001 — <reason>`,
#     so a NEW unguarded blind-except fails CI everywhere.
#   • T201 — the ONLY remaining entries are the genuine, PERMANENT legitimate-print
#     surfaces (not a transitional allowlist): the CLI presentation layer
#     (`_commands`; `_cli` has no prints), the read-CLIs (`_engine_support`:
#     validate/reads_cli/next_batch emit `print(json.dumps(...))` machine-contract
#     stdout + human status on stderr), the reconciler subprocess
#     (`_engine/rebar_reconciler`, `_engine/jira-capability-probe.py`) whose
#     stderr (RECON:/ERROR:/health) + stdout (OK:/report/json) prints ARE its
#     operational output, and `_alias.py`. These print BY DESIGN, so banning print
#     there is wrong — they keep a scoped T201 ignore. (Plan-review G6 confirmed AC5's
#     literal "empty the T201 allowlist" is non-executable without breaking these
#     documented surfaces; this is the resolution.) The transitional T201 ignores
#     (_store, reducer, graph, _io stderr diagnostics) were MIGRATED to the logger
#     and removed. The reconciler's inline `# noqa: T201` sites are now redundant with
#     this scoped entry but left in place as per-site documentation.
#   • `tests/**` is out of the convention's scope (test code legitimately catches
#     broadly and prints) — a permanent exemption, never part of the allowlist.
[tool.ruff.lint.per-file-ignores]
# Test code is out of the convention's scope: tests legitimately catch broadly (to
# assert on failures) and print (debug/diagnostic output). PERMANENT, not part of
# the shrinking allowlist.
"tests/**" = ["T201"]
# core leaves (__init__, reducer, graph, _store, _io) — SWEPT by 8d01 (crow-aeon-muck);
# removed from the allowlist. Inline `# noqa` carry the justifications; _io/_cli.py keeps
# inline `# noqa: T201` (CLI presentation), graph/_links.py keeps one inline T201 (stdout
# data contract). The 7 _io/import_ndjson.py BLE001 noqas were re-validated here.
# grounding — SWEPT by d360 (removed; the BLE0001 typo at harness.py:281 fixed and the
# BaseException narrowed to Exception). _engine_support BLE001 also SWEPT by d360; it
# KEEPS T201 — it is the data-CLI presentation layer (validate/reads_cli/resolver/
# next_batch emit print(json.dumps(...)) machine-contract stdout + human status on its
# own stderr), a legitimate-print surface like _cli/_commands.
"src/rebar/_engine_support/*" = ["T201"]
# MCP surface (mcp_server.py) + llm/workflow/ + llm top-level — SWEPT by ceaa; removed.
# The mcp_server.py:892 masking swallow was fixed (the failure-recording path now logs
# instead of swallowing); the two cleanup-and-reraise `except BaseException` sites
# (prompt_authoring/snapshot) carry justified noqas. No prints existed in this scope.
# CLI surface — BLE001 SWEPT by fd72 (_cli has no prints; removed entirely). `_commands`
# is the CLI presentation layer (usage strings, `Error:` messages, `exc.message`, and
# command data output) so it KEEPS T201; its broad-excepts were swept.
"src/rebar/_commands/*" = ["T201"]
"src/rebar/_alias.py" = ["T201"]
# _ids.py — the id-resolution leaf extracted from _engine_support/resolver.py (so the
# reducer imports it DOWN instead of reaching UP into _engine_support). Same
# legitimate-print category as resolver was: it emits ambiguous-match diagnostics to
# stderr for the data CLIs. KEEPS T201.
"src/rebar/_ids.py" = ["T201"]
# reconciler subprocess — BLE001 SWEPT by 0569 (20 broad-excepts: cleanup-and-reraise,
# rollback-must-not-mask-original, and fail-open fallbacks, all justified inline;
# characterization tests pin the is_not_found/http_status classification). KEEPS T201:
# the reconciler is a subprocess whose stderr (RECON:/ERROR:/health) + stdout (OK:/report/
# json result) prints ARE its operational output — a legitimate-print surface. The
# close-out reconciles the inline `# noqa: T201` sites against this per-file-ignore.
"src/rebar/_engine/rebar_reconciler/*" = ["T201"]
"src/rebar/_engine/jira-capability-probe.py" = ["T201"]
# Live, human-run Jira capture CLI (epic f89d, story A) — same legitimate-print
# operational surface as jira-capability-probe.py above: it streams capture
# progress to stderr. KEEPS T201.
"scripts/capture_jira_fixtures.py" = ["T201"]
# Human-run bind-state retarget CLI — a one-shot operational tool that prints its
# dry-run/apply report to stdout (the data surface) + errors to stderr. Same
# legitimate-print category as the capture CLI above. KEEPS T201.
"scripts/retarget_jira_project.py" = ["T201"]
# server.json env-contract drift gate CLI — prints its guard report + ::error::
# annotations to stdout (the CI surface). Legitimate-print category. KEEPS T201.
"scripts/check_server_manifest.py" = ["T201"]
# TypedDict generator CLI (story 3a10) — prints its regenerate/--check report to
# stdout (the CI drift-gate surface). Legitimate-print category. KEEPS T201.
"src/rebar/schemas/gen_types.py" = ["T201"]

[tool.mypy]
# Scoped, opt-in type checking. The pure in-process library core
# (reducer / graph / _store) is kept type-clean and gated in CI; the rest of the
# tree (engine helpers, reconciler) is checked advisory-only for now.
python_version = "3.11"
ignore_missing_imports = true
# Report errors ONLY in the files passed on the command line, never in modules
# reached via import. This pins the gating scope to exactly the named packages so
# the gate cannot go red because some *other* (not-yet-clean) module is later
# imported by the core. The advisory full-tree run still reports everything,
# because there every file is named on the command line.
follow_imports = "silent"
# Strictness ratchet (story d2fa / dullish-computable-buck). Phase 1: check the
# bodies of untyped functions everywhere (previously only signatures were checked,
# so bugs inside un-annotated defs slipped through). Phase 2 layers per-package
# `disallow_untyped_defs` via the overrides below.
check_untyped_defs = true

# ── mypy strictness ratchet: per-package `disallow_untyped_defs` ─────────────────
# SHRINK-ONLY ratchet. Packages listed here have every function annotated and are
# gated at full strictness. A package may only be ADDED to this list (never removed):
# the exempt set — the src/rebar top-level packages NOT listed here — is
# {reducer, graph→listed, _store, _io, _snapshot, schemas, _commands, _cli, llm,
# review_bot, _engine, _engine_support} minus the enabled set, and must only shrink.
# test_mypy_ratchet.py enforces that the enabled set never loses a member. To promote
# a package: annotate its remaining defs until `mypy src/rebar/<pkg> --disallow-untyped-defs`
# is clean, then add it here. See docs/architecture.md "mypy strictness ratchet".
[[tool.mypy.overrides]]
module = ["rebar.graph.*", "rebar.grounding.*"]
disallow_untyped_defs = true

[tool.coverage.run]
source = ["rebar"]
branch = true
# REQUIRED for pytest-xdist: under `-n>0` each worker records coverage in its own
# process, so coverage must write a per-process data file (`.coverage.<host>.<pid>.<rand>`)
# and combine them at the end. Without `parallel = true` the workers clobber a single
# `.coverage`, the combine yields only the controller's data (~ single-digit % << fail_under),
# the build goes red, and stray `.coverage.*` files leak into the checkout. With it, the
# combined TOTAL matches a serial run exactly. See docs/coverage.md. (story 8d36)
parallel = true

[tool.coverage.report]
# Documented floor, set BELOW the measured in-process total (77% on 2026-06-27,
# up from 61% on 2026-06-14 as the suite grew — see docs/coverage.md). Many tests
# drive rebar as a subprocess, so in-process coverage understates real exercise;
# the floor stays conservative (7-pt headroom) so it guards against a large
# regression without gating routine work. CI runs the same
# `-m "not integration and not external"` selection that produced 77%, so this
# floor does not break the (report-only) coverage step.
fail_under = 70

# ── Mutation testing (mutmut 3.x) ─────────────────────────────────────────────
# Scope is deliberately bounded to the highest-value behavioral cores (see
# docs/mutation-testing.md). mutmut walks every .py under `source_paths`, so
# `only_mutate` restricts the actually-mutated set to the core modules; the test
# selection runs only the focused tests that cover those cores so each mutant is
# evaluated in seconds, not minutes. Invocation + scope + score are documented in
# docs/mutation-testing.md.
[tool.mutmut]
source_paths = ["src/rebar"]
only_mutate = [
    "src/rebar/signing.py",
    "src/rebar/_engine_support/gates.py",
    "src/rebar/_engine_support/next_batch.py",
    "src/rebar/_engine_support/validate.py",
    "src/rebar/reducer/_processors.py",
    # Selective concurrency-path shards (story 25aa): the PURE decision logic of two
    # concurrency paths, extracted into small helpers so only the decision is mutated
    # (not the subprocess-heavy orchestration around it).
    "src/rebar/_commands/_compact_policy.py",
    "src/rebar/_store/_push_policy.py",
]
# Fast, fail-fast runner over the dev venv; -p no:randomly for determinism and a
# fixed basetemp to dodge the macOS tmp race. The test selection is scoped to the
# files that exercise the mutated cores (see docs/mutation-testing.md for the
# per-module mapping); widen it when broadening `only_mutate`.
pytest_add_cli_args = ["-x", "-q", "-p", "no:randomly", "--basetemp=/tmp/rebar-pytest-mut"]
pytest_add_cli_args_test_selection = [
    # signing.py
    "tests/unit/test_signing.py",
    "tests/interfaces/lifecycle/test_signature.py",
    # reducer/_processors.py (the fast, rich reducer characterization suite)
    "tests/scripts/reducer/",
    "tests/interfaces/store/test_reducer_single_source.py",
    # _engine_support/next_batch.py
    "tests/interfaces/queries/test_next_batch_compute.py",
    "tests/interfaces/queries/test_next_batch_behavior.py",
    # _engine_support/validate.py
    "tests/interfaces/queries/test_validate_compute.py",
    # _engine_support/gates.py
    "tests/interfaces/lifecycle/test_gate_rubric_consistency.py",
    "tests/interfaces/queries/test_ws5d_quality_fileimpact.py",
    "tests/interfaces/lifecycle/test_close_gate_story_epic.py",
    # _commands/_compact_policy.py (fold predicate shard, story 25aa)
    "tests/unit/test_compact_policy.py",
    # _store/_push_policy.py (push-policy classifier shard, story 25aa)
    "tests/unit/test_push_policy.py",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
# --strict-markers turns an unregistered @pytest.mark.X into a collection error
# (every custom marker must be registered below or via pytest_configure);
# --strict-config does the same for unknown ini keys. Together they keep marker
# typos (e.g. a misspelled tier) from silently passing — part of the external-
# test confinement (bug 4a48-6dd5-aef3-4c8e).
addopts = "--strict-markers --strict-config"
markers = [
    "unit: unit-tier tests (network-guarded)",
    "scripts: scripts-tier tests (engine scripts / reconciler)",
    "integration: integration-tier tests (may require live services)",
    "external: external-integration tests that hit third-party services (live LLM providers, etc.); excluded from the default run; run via the external-integration workflow with credentials",
    "live: live Jira reconciler-validation tests (story d01e); hit a dedicated test project + require JIRA_URL/JIRA_USER/JIRA_API_TOKEN + acli; excluded from the default run, self-skip without live env; GUARANTEE bilateral cleanup",
    "jira_live: a live test that requires Jira credentials + the acli binary",
    "interface: interface-parity tests (library / CLI / MCP over one store)",
    "allow_network: opt out of the network guard for a test",
    "benchmark: performance benchmark (informational; not a pass/fail gate)",
    "e2e: faithful round-trip tests that drive the real bpmn-io libraries via a Node harness (tests/e2e); self-skips when Node/npm is unavailable",
]
